[tool.poetry]
name = "zohocrm-python"
version = "0.1.7"
description = "API wrapper for ZohoCRM written in Python"
authors = ["Gearplug Team <apps@gearplug.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zohocrm"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

